Fixed stretched logo and list styles

--- a/app/public/css/taproot-public.css
+++ b/app/public/css/taproot-public.css
@@ -370,10 +370,10 @@ blockquote {
 q {
   quotes: "“" "”" "‘" "’";
 }
-ul,
-ol {
+.entry-content ul,
+.entry-content ol {
   list-style-position: outside;
-  padding: 0;
+  padding-left: 1em;
 }
 ul {
   list-style-type: disc;
@@ -631,6 +631,8 @@ body,
   -ms-flex-item-align: center;
       align-self: center;
   line-height: 1;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 .logo,
 .logo-wrapper svg {
