--- a/app/public/less/_typography.less
+++ b/app/public/less/_typography.less
@@ -178,10 +178,10 @@ q {
 
 // lists
 
-ul,
-ol {
+.entry-content ul,
+.entry-content ol {
     list-style-position: outside;
-    padding: 0;
+    padding-left: 1em;
 }
 
 ul {
@@ -214,7 +214,6 @@ dd {
 // }
 
 // tables
-
 table {
     border-collapse: collapse;
     // margin: 0 0 1.5em;
